# Thermal_EMI-mitigation

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
configs/: cluster_2x2.yaml  dual_thruster_interaction.yaml  hermes_tdu1_literature_anchor.yaml  single_thruster_baseline.yaml
src/clustered_ep_sim/: __init__.py  config.py
src/clustered_ep_sim/models/: __init__.py  emi.py  layout.py  risk.py  thermal.py  verification.py
src/clustered_ep_sim/visualization/: __init__.py  plots.py
tests/: test_calibration.py  test_models.py  test_verification.py
